base/power_monitor/power_monitor_device_source_ios.mm
@@ -9,6 +9,11 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace base {
 
+bool PowerMonitorDeviceSource::IsOnBatteryPowerImpl() {
+  NOTIMPLEMENTED();
+  return false;
+}
+
 void PowerMonitorDeviceSource::PlatformInit() {
   NSNotificationCenter* nc = [NSNotificationCenter defaultCenter];
   id foreground =
